--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,13 @@
 DATABASE_URL=postgres://postgres:root@127.0.0.1:5432/<nombre_db>
+
+TOKEN_SECRET=
+EMAIL=
+PASSWORD=
+
+
+FIREBASE_CONFIG_APIKEY=
+FIREBASE_CONFIG_AUTHDOMAIN=
+FIREBASE_CONFIG_PROJECTID=
+FIREBASE_CONFIG_STORAGEBUCKET=
+FIREBASE_CONFIG_MESSAGINGSENDERID=
+FIREBASE_CONFIG_APPID=
